load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fshaper.go"],
    importpath = "github.com/scionproto/scion/go/flowtele/fshaper",
    visibility = ["//visibility:private"],
    deps = [
        "//go/flowtele/dbus:go_default_library",
        "//go/flowtele/utils:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/log:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@com_github_pkg_profile//:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
    ],
)

go_binary(
    name = "fshaper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
