load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "address.go",
        "logger.go",
        "path.go",
        "scion.go",
    ],
    importpath = "github.com/scionproto/scion/go/flowtele/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/sciond:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/squic:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
    ],
)
