load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["datalogger.go"],
    importpath = "github.com/scionproto/scion/go/flowtele/dbus/datalogger",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/log:go_default_library",
    ],
)
